k8s-manifests/customer-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: customer-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-pod
  template:
    metadata:
      labels:
        app: customer-pod
    spec:
      containers:
        - name: kafka
          image: batugokce/customer-service:0.0.1
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
