k8s-manifests/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  clusterIP: None
  ports:
    - port: 9092
      name: kafka-port
      targetPort: 9092
      protocol: TCP
  selector:
    app: broker-1
  type: ClusterIP
  sessionAffinity: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: broker-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-1
  template:
    metadata:
      labels:
        app: broker-1
    spec:
      enableServiceLinks: false
      containers:
        - name: broker1
          image: confluentinc/cp-server:6.2.0
          ports:
            - containerPort: 9092
