k8s-manifests/order-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: order-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-pod
  template:
    metadata:
      labels:
        app: order-pod
    spec:
      containers:
        - name: kafka
          image: batugokce/order-service:0.0.1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
