k8s-manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trade-gateway
spec:
  selector:
    istio: ingress # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trade-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - trade-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/order
      route:
        - destination:
            host: order-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /api/v1/customer
      route:
        - destination:
            host: customer-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /api/v1/payment
      route:
        - destination:
            host: payment-service
            port:
              number: 80
